[package]
name = "rustxes"
version = "0.2.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustxes"
crate-type = ["cdylib"]

[dependencies]
process_mining = {version = "0.3.23", features = ["dataframes"]}
pyo3 = {version = "0.23", features = [ "extension-module"]}
polars = {version = "0.46.0", features = ["dtype-slim","timezones","partition_by"]}
pyo3-polars = {version = "0.20.0", features = ["dtype-struct"]}
rayon = "1.7.0"
chrono = {version = "0.4.34", features = ["serde"] }
uuid = {version = "1.4.1", features = ["v4", "serde"]}
serde_json = "1.0.105"
serde = {version = "1.0.188", features = ["derive"]}