[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "rustxes"
description = "Rust-based XES/OCEL2 event log importer"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
  'polars[pandas, pyarrow]',
]

[tool.maturin]
features = ["pyo3/extension-module"]
